customize for dorf.nyc website

--- a/src/index.html
+++ b/src/index.html
@@ -67,17 +67,17 @@
   </style>
 
   <!-- Primary Meta Tags -->
-  <title>Henry Heffernan - Portfolio 2022</title>
-  <meta name="title" content="Henry Heffernan - Software Engineer">
+  <title>Dorf - NYC</title>
+  <meta name="title" content="Zachary Dorf - NYC">
   <meta name="description"
-    content="I'm Henry, a Software Engineer based in NY. Rensselaer Polytechnic Institute Graduate with my B.S. in Computer Science, currently looking for a full time role.">
+    content="I'm Zachary Dorf, CEO & Founder of Bask Health.">
 
   <!-- Open Graph / Facebook -->
   <meta property="og:type" content="website">
-  <meta property="og:url" content="https://henryheffernan.com/">
-  <meta property="og:title" content="Henry Heffernan - Software Engineer">
+  <meta property="og:url" content="https://dorf.nyc/">
+  <meta property="og:title" content="Zachary Dorf - NYC">
   <meta property="og:description"
-    content="I'm Henry, a Software Engineer based in NY. Rensselaer Polytechnic Institute Graduate with my B.S. in Computer Science, currently looking for a full time role.">
+    content="I'm Zachary Dorf, CEO & Founder of Bask Health.">
 
   <!-- Twitter -->
 
@@ -85,35 +85,35 @@
   <meta property="twitter:card" content="summary_large_image">
   <meta name="twitter:card" content="summary_large_image">
 
-  <meta property="twitter:url" content="https://henryheffernan.com/">
-  <meta name="twitter:url" content="https://henryheffernan.com/">
+  <meta property="twitter:url" content="https://dorf.nyc/">
+  <meta name="twitter:url" content="https://dorf.nyc/">
 
-  <meta property="twitter:title" content="Henry Heffernan - Software Engineer">
-  <meta name="twitter:title" content="Henry Heffernan - Software Engineer">
+  <meta property="twitter:title" content="Zachary Dorf - NYC">
+  <meta name="twitter:title" content="Zachary Dorf - NYC">
 
   <meta property="twitter:description"
-    content="I'm Henry, a Software Engineer based in NY. Rensselaer Polytechnic Institute Graduate with my B.S. in Computer Science, currently looking for a full time role.">
+    content="I'm Zachary Dorf, CEO & Founder of Bask Health.">
   <meta name="twitter:description"
-    content="I'm Henry, a Software Engineer based in NY. Rensselaer Polytechnic Institute Graduate with my B.S. in Computer Science, currently looking for a full time role.">
+    content="I'm Zachary Dorf, CEO & Founder of Bask Health.">
 
-  <meta property="twitter:image" content="https://henryheffernan.com/images/preview-new.jpg">
-  <meta name="twitter:image" content="https://henryheffernan.com/images/preview-new.jpg">
+  <meta property="twitter:image" content="https://www.bask.bio/images/social_share_bask_platform.jpg">
+  <meta name="twitter:image" content="https://www.bask.bio/images/social_share_bask_platform.jpg">
 
   <!-- Images -->
-  <meta property="og:image" content="https://henryheffernan.com/images/preview-new.jpg">
-  <meta property="og:image:secure" content="https://henryheffernan.com/images/preview-new.jpg">
+  <meta property="og:image" content="https://www.bask.bio/images/social_share_bask_platform.jpg">
+  <meta property="og:image:secure" content="https://www.bask.bio/images/social_share_bask_platform.jpg">
 
   <link rel="shortcut icon" href="../static/images/favicon.ico" type="image/x-icon">
 
-  <!-- Global site tag (gtag.js) - Google Analytics -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=G-4FJBF6WF60"></script>
-  <script>
-    window.dataLayer = window.dataLayer || [];
-    function gtag() { dataLayer.push(arguments); }
-    gtag('js', new Date());
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-FM6ZQ7FHSK"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
 
-    gtag('config', 'G-4FJBF6WF60');
-  </script>
+  gtag('config', 'G-FM6ZQ7FHSK');
+</script>
 </head>
 
 <body>
